# zarr-data-management

./: environment.yml  pyproject.toml  quick_test.py  quick_test_ncfold.py  result.json  test_delete.py  test_existzarr.py  test_list.py  test_query.py  test_querynojson.py
metazarr/: __init__.py  accessor.py  catalog.py  cli.py  config.py  creator.py  exceptions.py  utils.py
metazarr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
raw_nc/: T2025072400.nc
zarr_out/: .zmetadata
zarr_out/T/: .zarray  0.0.0
zarr_out/lat/: 0
zarr_out/time/: .zattrs
